--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@anthropic-ai/sdk": "^0.71.2",
     "@prisma/client": "^5.22.0",
     "@react-pdf/renderer": "^4.3.2",
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.18.0",
     "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^25.0.9",
     "@types/react": "^19.2.8",
+    "@types/three": "^0.182.0",
     "autoprefixer": "^10.4.23",
     "framer-motion": "^12.29.0",
     "next": "^14.2.35",
@@ -27,6 +30,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwindcss": "^4.1.18",
+    "three": "^0.160.0",
     "typescript": "^5.9.3",
     "zustand": "^5.0.10"
   },
